--- a/www/package.json
+++ b/www/package.json
@@ -14,9 +14,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^2.29.3",
+    "flowbite": "^1.5.5",
+    "flowbite-datepicker": "^1.2.2",
     "next": "^13.0.7",
     "postcss": "^8.4.20",
     "react": "^18",
+    "react-day-picker": "^8.4.1",
     "react-dom": "^18",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
