--- a/www/package.json
+++ b/www/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.3",
     "flowbite": "^1.5.5",
     "flowbite-datepicker": "^1.2.2",
+    "moment": "^2.29.4",
     "next": "^13.0.7",
     "postcss": "^8.4.20",
     "react": "^18",
