package json for deployment

--- a/www/package.json
+++ b/www/package.json
@@ -4,10 +4,17 @@
   "description": "Frontend for django app",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 4000",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "next start -p 4000",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:cypress": "NODE_ENV=test cypress open",
+    "lint": "eslint .",
+    "lint:watch": "esw . --watch --cache",
+    "lint:watchAll": "esw . --watch",
+    "circleci:run": "circleci local execute --job $JOB"
   },
   "author": "",
   "license": "ISC",
