--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for django app",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next -p 4000",
     "build": "next build",
     "start": "next start -p 4000",
     "test": "NODE_ENV=test jest",
