--- a/www/package.json
+++ b/www/package.json
@@ -36,6 +36,10 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:brberis/fullscope-python-django-resto-app.git"
+  },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^14.0.23",
