--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@types/date-fns": "^2.6.0",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "flowbite": "^1.5.5",
     "flowbite-datepicker": "^1.2.2",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/cookie-parser": "^1.4.3",
     "@types/node": "^14.0.23",
     "@types/react": "^18.0.1",
     "autoprefixer": "^10.4.13",
