--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.6.0",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@types/date-fns": "^2.6.0",
@@ -34,6 +35,7 @@
     "react-dom": "^18",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2"
   },
